--- a/thesis/MainLatex.tex
+++ b/thesis/MainLatex.tex
@@ -12,6 +12,8 @@
 \usepackage{float}
 \usepackage{subfigure}
 \usepackage{MnSymbol}
+\usepackage{graphicx}
+\usepackage{float}
 
 %\usepackage[toc, nomain, automake, nonumberlist,% don't create 'main' glossary
 %abbreviations% create 'abbreviations' glossary
