--- a/thesis/abstract.tex
+++ b/thesis/abstract.tex
@@ -3,6 +3,6 @@
 	\textbf{\large Abstract}
 \end{center}
 \noindent
-Breast cancer remains a significant global health concern, emphasizing the need for advanced and accurate detection methods to improve patient outcomes. This research introduces a novel approach to early breast cancer detection using digital imaging and wavelet-based statistical analysis. The study leverages DICOM files containing mammographic images, employing wavelet transformations to extract essential features and statistical characteristics from the images. These extracted features serve as input to a predictive model, facilitating the identification of patterns indicative of breast cancer.
+Breast cancer is a major global health issue, that needs advanced and valid healthcare methods and diagnosis to increase the patient’s chances of survival. To allow researchers to facilitate in this space, we are going to conduct our research on early breast cancer detection using wavelet methods and the statistical composition of digital images. We employ DICOM-encapsulated mammography images and apply a wavelet modification to extract important features and statistical attributes from the pictures. By using these characteristics, a prediction algorithm can identify trends that point to the possibility of breast cancer.
 
-By utilizing statistical measures derived from wavelet-transformed images, the model aims to provide a robust and interpretable framework for breast cancer prediction. The dataset comprises a diverse set of mammograms, ensuring the model's generalizability across different patient profiles. The research contributes to the field of early breast cancer detection by introducing a methodology that combines advanced image processing techniques with machine learning. The model's interpretability is enhanced through the extraction of statistical features, providing insights into the underlying patterns contributing to cancer detection. The ultimate goal is to develop a reliable and transparent tool that complements existing diagnostic practices, potentially improving the efficiency of breast cancer screening and contributing to better patient outcomes. 
+The objective here is to create an understandable model for the diagnosis of breast cancer, which will be tested using different factors in many classes of classifiers using the statistics picked from the pictures of breast tissues. The study sample sets called the mammograms, detect specific patient attributes and aid in the examination of model accuracy across different clinical conditions and a wider range of patients. This novel method combines the advancement of image processing tools and machine learning with structured feature extraction to capture such breast tissue patterns that can be used to detect cancer. The model aims to be accurate, robust and straightforward, this is a step aimed at replacing current tools and techniques on breast cancer diagnosis, therefore early detection of breast cancer will be greatly facilitated.
