--- a/thesis/conclusion.tex
+++ b/thesis/conclusion.tex
@@ -1,7 +1,7 @@
 \chapter{Conclusion}
 \label{chap5}
 \section{Recapitulation of Key Findings}
-The purpose of this study was to create a wavelet-based method for detecting breast cancer by using machine learning models on statistical parameters taken from DICOM pictures. One of the study's main conclusions is that machine learning algorithms—such as Decision Tree, Random Forest, Support Vector, and Logistic Regression—can successfully be used to diagnose breast cancer. Using an extensive dataset, the models were assessed and trained, resulting in a range of performance outcomes.
+The purpose of this study was to create a wavelet-based method for detecting breast cancer by using machine learning models on statistical parameters taken from DICOM pictures. One of the study's main conclusions is that machine learning algorithms, such as Decision Tree, Random Forest, Support Vector, and Logistic Regression combined with wavelet based statistical parameters are not successfully to diagnose breast cancer. Using an extensive dataset, the models were assessed and trained, resulting in a range of performance outcomes.
 
 A number of statistical factors, such as mean, standard deviation, skewness, and kurtosis, were shown to be useful in describing subtle characteristics seen in breast tissue, which enhanced the models' ability to discriminate. Model comparisons showed how crucial it is to take into account various algorithmic techniques in order to achieve the best results.
 \section{Implications for Breast Cancer Detection}
