--- a/thesis/methodology.tex
+++ b/thesis/methodology.tex
@@ -1,54 +1,78 @@
 \chapter{Methodology}
 \label{chap3}
 \section{Datasets}
-This section provides an overview of the diverse datasets employed in this study to train, validate, and test the developed breast cancer detection models. The utilization of multiple datasets enhances the robustness and generalizability of the proposed model, encompassing varied demographics, imaging technologies, and annotation methodologies.
+In this part, the various datasets, which are used for training, testing, and validating the developed breast cancer detection models, are summarized. The employment of multiple datasets raises the resilience and portability of the proposed model, covering diverse demographics, imaging modalities, and annotation types.
 \subsection{VinDr-Mammo Dataset}
-The VinDr-Mammo dataset, introduced by Pham et al.\cite{Vindir}, is a pivotal component of this study. This large-scale benchmark dataset for computer-aided detection and diagnosis in full-field digital mammography (FFDM) comprises 5,000 four-view exams. Double-read by experienced mammographers, the dataset provides cancer assessment and breast density following the Breast Imaging Report and Data System (BI-RADS). This contemporary dataset, aligned with current clinical practices, includes detailed annotations of breast abnormalities such as mass, calcification, asymmetries, and architectural distortion, offering comprehensive information for developing and evaluating breast cancer detection algorithms.
-\\ Parameters:
+The VinDr-Mammo dataset proposed by Pham et al. \cite{Vindir}, crucial for advancing breast cancer detection research, is structured within a project directory that comprises DICOM files, annotations, and metadata across 5,000 mammography exams. Specifically, the dataset organization includes:
 \begin{itemize}
-  \item Breast Abnormalities: The dataset includes detailed annotations for various abnormalities, including mass, calcification, asymmetries, and architectural distortion.
-  \item Clinical Parameters: Patient-related details, such as age, contribute to the dataset's richness and align with real-world clinical scenarios.
-  \item BI-RADS Assessment: Each breast is assigned a BI-RADS assessment, providing crucial information for the development and evaluation of breast cancer detection algorithms.
+  \item images: A subfolder containing 5,000 subdirectories for each exam, with each subdirectory named after a hashed study identifier. Each contains four DICOM files representing two standard views (CC and MLO) of each breast.
+  \item breast-level-annotations.csv: Provides BI-RADS assessment and image metadata for each image, including study-id, series-id, laterality (L or R), view-position (CC/MLO), image dimensions (height and width), breast-birads (BI-RADS assessment), breast-density, and the dataset split (training/test).
+  \item finding-annotations.csv: Contains detailed annotations for breast abnormalities per image, including the metadata from the image and specific annotations like finding-categories, finding-birads (BI-RADS assessment of the finding), and bounding box coordinates (xmin, ymin, xmax, ymax).
+  \item metadata.csv: Offers additional details relevant for research, such as the patient's age, and imaging device's model and manufacturer, provided by DICOM tags.
 \end{itemize}
-This dataset's relevance lies not only in its size but also in the meticulous annotations, making it a valuable resource for developing and validating breast cancer detection models, especially in scenarios where interpretability is of primary concern.
+This dataset's relevance is not just because of its large size but the annotations which make it an excellent resource for building and validating breast cancer detection models especially in cases where interpretability is crucial.
 \subsection{RSNA Screening Mammography Breast Cancer Detection Dataset}
-The RSNA Screening Mammography Breast Cancer Detection dataset \cite{RSNA}, is integral to the study's exploration of breast cancer identification from screening exams. The dataset contains radiographic breast images of female subjects, and the primary goal is to identify cases of breast cancer in mammograms. With metadata encompassing patient information, imaging details, and cancer-related annotations, this dataset provides a diverse and contemporary collection for training and testing the proposed models, contributing to the dataset's richness, enabling a thorough investigation of breast cancer detection algorithms.
-\\ Parameters:
+The RSNA Screening Mammography Breast Cancer Detection dataset \cite{RSNA}, is integral to the study's exploration of breast cancer identification from screening exams. The dataset contains radiographic breast images, and the primary goal is to identify cases of breast cancer in mammograms. This dataset provides a detailed framework for breast cancer detection through screening mammography, incorporating DICOM images and extensive metadata. The organization allows for nuanced analysis and model training:
+
 \begin{itemize}
-  \item Clinical Details: Metadata includes site ID, patient ID, image ID, laterality (left or right breast), age, implant status, density rating, machine ID, and more.
-  \item Cancer Annotations: Annotations related to cancer, biopsy, invasive status, and BIRADS (Breast Imaging Reporting and Data System) assessments contribute to the dataset's utility for cancer detection tasks.
+  \item DICOM Images: Featuring mammograms, potentially in jpeg 2000 format, across roughly 8,000 patients. Each patient typically has four images.
+  \item site-id: Identifier for the source hospital.
+  \item patient-id: Unique code for the patient.
+  \item image-id: Unique identifier for the image.
+  \item laterality: Indicates if the image is of the left or right breast.
+  \item view: Image orientation, with two views per breast being standard.
+  \item age: Patient's age in years.
+  \item implant: Indicates the presence of breast implants.
+  \item density: Breast tissue density rating from A (least dense) 
+  to D (most dense).
+  \item machine-id: Identifier for the imaging device.
+  \item cancer: Malignancy status of the breast, with follow-up details 
+  like biopsy, invasive status, and BIRADS assessments provided for training data.
+
 \end{itemize}
 This dataset's significance lies in its real-world applicability, aligning with the challenges faced in breast cancer screening programs. The diverse set of parameters provides a holistic view, enabling the study to address nuanced aspects of breast cancer detection.
+\subsection{INbreast Dataset}
+The INbreast dataset, introduced by Moreira et al. \cite{Inbreast} in their technical report, is a valuable resource for breast cancer research and model development. This dataset contains 410 photos, that is 115 cases total in the INbreast archive which were used for the research in this essay. These ninety incidences involved women were with images (MLO and CC) of the two breasts being photographed that give us a total of four photographs for every individual case. These cases have 49 of them who had breast amputation, in which they are their only document of one of their breasts. DICOM format is the encoding used for the images in the collection that has characters regarding the information of the images, for instance, info related to equipment of capturing, size, voxel, color mode, quantity of bits, and so forth. The material on the planning of mammogram by the database will be tested on different type of lesions, for instance masses, calcification, asymmetries, and distortions. As well, the database includes the segmentations of defects which are associated to medical subspecialty, such as imbalance, multi-directional growth, calcification etc.
+
+The INbreast dataset's strengths lie in its focus on full-field digital mammograms, wide variability of cases, and the provision of precise annotations, making it a valuable asset for researchers aiming to develop and evaluate computer-aided detection and diagnosis systems for breast cancer.
 \section{Computational Environment}
-The code implementation for the wavelet-based breast cancer detection system was executed using Python 3.9 as the core programming language. To accelerate machine learning modeling and training, NVIDIA GPU hardware was employed, utilizing CUDA 12.2 and cuDNN 8.6 libraries for parallel computation and optimization of deep learning operations. Key computer vision and image processing functions were facilitated by OpenCV 4.8, including tasks such as loading images, transformations, and visualization. The robust ecosystem of scientific computing tools in Python, such as NumPy, scikit-learn (sklearn), and pandas, played a crucial role in providing essential numerical, visualization, and machine learning capabilities. The pydicom library was employed for reading DICOM files and extracting pixel data, contributing to the preprocessing steps. Conda virtual environments were employed to isolate project dependencies, ensuring consistent and reproducible runs. This Python environment offered efficiency in prototyping and experimentation, given its user-friendly interface and a vast selection of machine learning and computer vision libraries. Table 3.1 details the versions of the main Python libraries used in the experiments.
-Library Version
-CUDA 12.2
-cuDNN 8.6
-OpenCV 4.8
-numpy 1.25.1
-scikit-learn 0.24.2
-pandas 1.3.3
-pydicom 2.1.2
+Python 3.9 served as the kernel language for the high-level wavelet-based breast cancer detection system. Tremendous speedup was achieved in the process of machine learning modeling and training by using NVIDIA GPU hardware, CUDA 12.2 and cuDNN 8.6 being the libraries for parallel computing and deep learning operations optimization. The strength of Python in scientific computing which is available in the form of NumPy, scikit-learn (sklearn), and pandas was critical in ensuring the numerical, visualization, and machine learning capabilities were in existence. Pydicom was utilized for reading DICOM files and extracting pixel data that were further used in the preprocessing phase. Conda virtual environments has been used to isolate project dependencies, achieved an identical and consistent results. This Python environment made it a quick, easy and agile prototyping and experimentation process due to its user-friendly interface and many machine learning and computer vision libraries available.
+\begin{table}[htbp]
+  \centering
+  \caption{Versions of Python Main Libraries that Were Used}
+  \begin{tabular}{|c|c|}
+    \hline
+    Library & Version \\
+    \hline
+    numpy & 1.26.3 \\
+    scipy & 1.10.1 \\
+    pylibjpeg & 2.0.0 \\
+    numpy & 1.25.1 \\
+    scikit-learn & 1.1.0 \\
+    pandas & 2.2.0 \\
+    pydicom & 2.1.2 \\
+    \hline
+  \end{tabular}
+\end{table}
 \section{Preprocessing}
-In the dedicated quest for a profound comprehension of the breast cancer detection process, our research methodology strategically integrates a critical preprocessing step. This step involves the extraction of key statistical parameters from Digital Imaging and Communications in Medicine (DICOM) images, a fundamental phase aimed at unraveling the intricate characteristics embedded within the images. The overarching goal is to set a robust foundation for the subsequent application of wavelet-based feature extraction techniques.
+Our research methodology strategically integrates a critical preprocessing step. This step involves the extraction of key statistical parameters from Digital Imaging and Communications in Medicine (DICOM) images, a fundamental phase aimed at unraveling the intricate characteristics embedded within the images. The overarching goal is to set a robust foundation for the subsequent application of wavelet-based feature extraction techniques.
 \subsection{Choice of Statistical Parameters}
-The choice of statistical parameters is crucial in determining our approach when it comes to the identification of breast cancer. Our careful selection of statistical metrics, which we based on the work of Kumar and Gupta \cite{importancestats}, aims to customize the image processing method to the unique characteristics of medical imaging.
-Important statistical metrics including mean, mode, median, variance, standard deviation, covariance, skewness, and kurtosis are all included in our list. Every parameter is selected with a specific goal in mind: to capture various aspects of the pixel intensity distributions in DICOM images that are pertinent to the identification of breast cancer.
-Through a purposeful adaptation of our parameter selection to the insights offered by Kumar and Gupta \cite{importancestats}, we guarantee that our methodology is not random but rather tailored to the specific issues presented by breast cancer imaging. The rationale behind each chosen measure is grounded in its potential to unveil irregularities, anomalies, and distinctive features within breast tissue.
+The parameter of statistical significance plays a significant role in the approach we take during the breast cancer identification. Our carefully chosen statistical indicators are based on the work of Kumar and Gupta \cite{importancestats}, which is the purpose of designing a medical imaging method that fits the peculiarities of medical imaging.
+You can find in our list mean, mode, median, variance, standard deviation, covariance, skewness, and kurtosis among, which are important statistical metrics. Every parameter is selected with a specific goal in mind: to account for different ideas of DICOM picture intensity distributions which are focus of detecting breast cancer.
+By an attentive adjustment of our parameters to the information from Kumar and Gupta \cite{importancestats}, we are able to have a guarantee that our methodology is not at random but rather fixed at the particulars of the given breast cancer imaging problems. The logical basis of the selected technique is diversified into its efficiency in detecting abnormalities, outlines, and specific features within breast tissue.
 \subsection{Significance of Selected Parameters}
-Multiresolution representations, such as wavelet and curvelet, have proven to be effective in image processing applications, allowing for zooming in and out on the underlying texture structure \cite{MESELHYELTOUKHY2012123}. In the context of breast cancer detection, the chosen statistical parameters offer a comprehensive insight into the nuanced characteristics of pixel intensity distributions within DICOM images. The subsequent lines elaborate on the significance of each parameter, shedding light on their distinct contributions to the representation of breast tissue characteristics.
+Wavelet and curvelet, which are the multiresolution representations, have been successfully used in image processing applications to zoom up and down on their underlying texture structure \cite{MESELHYELTOUKHY2012123}. The statistical parameters give a rich picture of the fine details of the distributions intensities of pixel within DICOM images especially in the context of breast cancer detection. From the subsequent stanza all essential components are highlighted, with each one outlined in detail to demonstrate its purpose in the manifestation of the appearance of breast tissue.
 \begin{itemize}
-  \item Mean: The mean, a measure of central tendency, signifies the average pixel intensity within a DICOM image. In the realm of breast cancer detection, variations in mean intensity can serve as crucial indicators. Anomalies or irregularities in breast tissue, such as the presence of masses or abnormalities, may manifest as deviations from the expected mean intensity. Tracking these variations aids in identifying subtle changes in tissue composition. For instance, an elevated mean intensity in a specific region could suggest the presence of a suspicious mass, contributing valuable insights to the diagnostic process.
-  \item Standard Deviation: The standard deviation, a measure of dispersion, characterizes the degree of variability in pixel intensities within a DICOM image. In the context of breast cancer detection, standard deviation plays a pivotal role in assessing the consistency or variability of pixel values. Higher standard deviation values indicate greater variability, which may be attributed to irregularities in tissue composition. An increased standard deviation could point to regions with heightened pixel intensity fluctuations, potentially signifying the presence of abnormalities. Combining the mean and standard deviation offers a nuanced understanding of both central tendency and variability, enhancing the model's ability to discern subtle patterns indicative of breast cancer.
-  \item Skewness: Skewness quantifies the asymmetry of the pixel intensity distribution. Deviations from a normal distribution, as indicated by skewness, may suggest irregularities in breast tissue, potentially signaling the presence of abnormalities.
-  \item Kurtosis: Kurtosis, as a statistical parameter, measures the tail heaviness of the pixel intensity distribution within DICOM images. In the context of breast cancer detection, elevated kurtosis values may serve as indicators of outliers or distinctive features in mammographic images. These distinctive features could potentially highlight regions that require closer examination for the presence of abnormalities or suspicious masses \cite{li2020diagnostic}. The diagnostic potential of kurtosis in characterizing breast tumors has been explored in studies utilizing diffusion kurtosis imaging (DKI) as an imaging technique \cite{li2020diagnostic}.
+  \item Mean: The term, “mean” (measure of central tendency) implies the average pixel intensity in a DICOM image. In the aspect of breast cancer detection, the variations in the mean intensity provide vital information. Any abnormalities or deviations from the normal tissue pattern such as presence of irregularities or mass in the breast may be detected through the measurement of mean intensity whose value is different than the expected value. These changes track the tissue variations and help detect small, yet important tissue composition changes. An example of that would be, the mean intensity being elevated in some regions could be an indication of the mass being present which would be additional information for the diagnostics process to use.
+  \item Standard Deviation: The standard deviation, a measure of dispersion of which the pixel intensities in a DICOM image reflect the level of variability, characterizes the spread of values in a DICOM image. In the context of mammography and breast cancer determination, standard deviation is very important in showing the pixel values consistency or variation. A larger standard deviation signifies a higher variability in response to frequency and is indicative of a possible microstructure deterioration. A greater standard deviation is likely to mean the existence of identified regions with high fluctuations in intensity level, which could very well signify the presence of abnormalities. Using the mean and standard deviation provides a more complex knowledge of not only the central tendency and variability, but also the strength of the model in showing the subtle patterns specific to breast cancer.
+  \item Skewness: Symmetry or Skewness describes which side of the pixel intensity distribution has more pixels. Skewness of data from a normal distribution suggests that there may be some irregularities in breast tissue, which gradually leads to a more thorough subsequent investigation.
+  \item Kurtosis: The kurtosis as a statistical feature indicator detects the tail heaviness of the pixel intensity of the DICOM images. When searching for breast cancer on mammograms, the high research values represent outliers or distinct features. The contrast characteristics could help to identify the zones for which the closer inspection may be needed for exclusion of the abnormalities or the masses \cite{li2020diagnostic}. The diagnostic ability of kurtosis in mapping breast cancer cells has been investigated in the studies that used the diffusion kurtosis imaging technique (DKI) as the imaging technique \cite{li2020diagnostic}.
 \end{itemize}
 \subsection{Computational Implementation}
-The computational process involves two main steps: wavelet transformation and statistical parameter computation, as outlined in the work by Yan et al \cite{YAN2006285}. The wavelet transformation, applied using a specified wavelet type (e.g., 'haar') and decomposition levels, produces coefficients. These coefficients are then utilized to derive the selected statistical parameters at different levels of decomposition. For each DICOM file, a corresponding text file is generated to store the extracted statistical information and wavelet coefficients.
+The computational process involves two main steps: wavelet transformation and statistical parameter computation, described in the paper by Yan et al \cite{YAN2006285} . The wavelet transform, using a particular wavelet type (for example, 'haar') and decomposition levels, produce coefficients. These coefficients are then applied to derive the parameters of interest at various stages of decomposition. Every DICOM file is followed by a text file where the statistical data and wavelet coefficients are stored.
 
-The significance of these statistical parameters lies in their capacity to encapsulate nuanced information about pixel intensity distributions, providing a foundational understanding for subsequent wavelet-based feature extraction in the pursuit of accurate breast cancer detection.
-
+The fact that these statistical parameters are able to encapsulate complex pixel intensity distributions makes them useful foundational information used in wavelet-based feature extraction, thereby allowing for accurate breast cancer detection.
 \subsection{Model Development and Validation}
-Informed by Barragán-Montero et al.'s comprehensive review on AI in medical imaging \cite{barragan2021artificial}, the breast cancer detection models created and used in this study employed diverse machine learning algorithms: LogisticRegression, RandomForestClassifier, SVC, and DecisionTreeClassifier. This ensemble approach, capturing varied patterns within the data, aimed to enhance robustness and generalizability.
+Informed by Barragán-Montero et al.'s comprehensive review on AI in medical imaging \cite{barragan2021artificial}, the breast cancer detection models created and used in this study employed diverse machine learning algorithms: LogisticRegression, RandomForestClassifier, Support Vector Classifier (SVC) and DecisionTreeClassifier.
 
-Both the creation and validation of the breast cancer detection models were done with great care to guarantee their dependability. Statistical features derived from DICOM images comprised the datasets. The train test split method from the sklearn model selection module was used to split the datasets into training and testing sets. This stratification made it possible to evaluate model performance objectively, which is essential for practical use.
+The development as well the validation of the breast cancer detection models was accomplished by being highly conscious to keep the utilization of the models fully reliable. The datasets had DICOM images of statistical features as its components. The train test split method from the sklearn Modular model selection module was used to to partition the data into training and test sets. This division allowed us to assess predictive power of models on the one hand and objective on the other: it is a crucial issue from the view of practical use.
