--- a/thesis/papers.bib
+++ b/thesis/papers.bib
@@ -70,6 +70,17 @@ University of Saskatchewan},
 	year = {2006},
 }
 
+@article{PublicHealthAgencyofCanada2024,
+  title = {{Cancer}},
+	authour = {Breast},
+  year = {2024},
+  month = {March},
+  day = {2},
+  url = {https://www.canada.ca/en/public-health/services/chronic-diseases/cancer/breast-cancer.html},
+  note = {Accessed: 2024-03-02},
+	journal = {Public Health Agency of Canada},
+}
+
 @article{Ovarian,
 	author = {R.,Jalloul and Chethan, H. K. and Alkhatib, R.},
 	journal = {Diagnostics (Basel, Switzerland)},
@@ -139,12 +150,19 @@ keywords = {Medical imaging, Image fusion, Multimodality, Biorthogonal wavelet t
 	year = {2022},
 }
 
-@article{RSNA,
-	author = {Pham, Hieu Huy Pham and Trung, Hieu Nguyen and Nguyen,Ha Quy},
-	journal = {PhysioNet},
-	title = {{VinDr-Mammo: A large-scale benchmark dataset for computer-aided detection and diagnosis in full-field digital mammography (version 1.0.0)}},
-	note = {\url {https://doi.org/10.13026/br2v-7517}},
+@article{Inbreast,
+	author = {Moreira, Ines C. and Amaral, Igor and Domingues,Ines et al.},
+	journal = {Academic Radiology},
+	title = {{INbreast: Toward a Full-field Digital Mammographic Database}},
+	note = {\url {https://doi:10.1016/j.acra.2011.09.014}},
+	year = {2011},
+}
+
+@artile{RSNA,
+	author = {Chris Carr and Felipe Kitamura and George Partridge and inversion and Jayashree Kalpathy-Cramer and John Mongan and Katherine Andriole and Lavender and Maryam Vazirabad and Michelle Riopel and Robyn Ball and Sohier Dane and Yan Chen},
+	title = {{RSNA Screening Mammography Breast Cancer Detection}},
 	year = {2022},
+	note = {\url{https://kaggle.com/competitions/rsna-breast-cancer-detection}},
 }
 
 @article{importancestats,
@@ -152,13 +170,13 @@ author = {Kumar, Vijay and Gupta, Priyanka},
 year = {2012},
 month = {08},
 pages = {},
-title = {Importance of Statistical Measures in Digital Image Processing},
+title = {{Importance of Statistical Measures in Digital Image Processing}},
 volume = {2},
 journal = {International Journal of Emerging Technology and Advanced Engineering}
 }
 
 @article{MESELHYELTOUKHY2012123,
-title = {A statistical based feature extraction method for breast cancer diagnosis in digital mammogram using multiresolution representation},
+title = {{A statistical based feature extraction method for breast cancer diagnosis in digital mammogram using multiresolution representation}},
 journal = {Computers in Biology and Medicine},
 volume = {42},
 number = {1},
@@ -171,7 +189,7 @@ author = {Mohamed {Meselhy Eltoukhy} and Ibrahima Faye and Brahim {Belhaouari Sa
 }
 
 @article{li2020diagnostic,
-  title={The Diagnostic Performance of Diffusion Kurtosis Imaging in the Characterization of Breast Tumors: A Meta-Analysis},
+  title={{The Diagnostic Performance of Diffusion Kurtosis Imaging in the Characterization of Breast Tumors: A Meta-Analysis}},
   author={Li, Z. and Li, X. and Peng, C. and Dai, W. and Huang, H. and Li, X. and Xie, C. and Liang, J.},
   journal={Frontiers in oncology},
   volume={10},
@@ -182,7 +200,7 @@ author = {Mohamed {Meselhy Eltoukhy} and Ibrahima Faye and Brahim {Belhaouari Sa
 }
 
 @article{barragan2021artificial,
-  title={Artificial intelligence and machine learning for medical imaging: A technology review},
+  title={{Artificial intelligence and machine learning for medical imaging: A technology review}},
   author={Barragan-Montero, A. and Javaid, U. and Valdes, G. and et al.},
   journal={Physica medica : PM : an international journal devoted to the applications of physics to medicine and biology : official journal of the Italian Association of Biomedical Physics AIFB},
   volume={83},
@@ -193,7 +211,7 @@ author = {Mohamed {Meselhy Eltoukhy} and Ibrahima Faye and Brahim {Belhaouari Sa
 }
 
 @article{YAN2006285,
-title = {Wavelet transform-based modal parameter identification considering uncertainty},
+title = {{Wavelet transform-based modal parameter identification considering uncertainty}},
 journal = {Journal of Sound and Vibration},
 volume = {291},
 number = {1},
@@ -204,3 +222,39 @@ doi = {https://doi.org/10.1016/j.jsv.2005.06.005},
 url = {https://www.sciencedirect.com/science/article/pii/S0022460X05003913},
 author = {Yan, BF. and Miyamoto, A. and Bruhwiler, E.},
 }
+
+@article{ohuchi2016sensitivity,
+  title={{Sensitivity and specificity of mammography and adjunctive ultrasonography to screen for breast cancer in the Japan Strategic Anti-cancer Randomized Trial (J-START): a randomised controlled trial}},
+  author={Ohuchi, Noriaki and Suzuki, Akihiko and Sobue, Tomotaka and Kawai, Masaaki and Yamamoto, Seiichiro and Zheng, Ying-Fang and et al.},
+  journal={The Lancet},
+  volume={387},
+  number={10016},
+  pages={341-348},
+  year={2016},
+  publisher={Elsevier},
+  doi={10.1016/S0140-6736(15)00774-6}
+}
+
+@article{forde2008understanding,
+  title={{Understanding the limits to generalizability of experimental evolutionary models}},
+  author={Forde, Samantha and Beardmore, Robert and Gudelj, Ivana and others},
+  journal={Nature},
+  volume={455},
+  pages={220--223},
+  year={2008},
+  publisher={Nature Publishing Group},
+  doi={10.1038/nature07152}
+}
+
+@article{zebari2021breast,
+  title={{Breast Cancer Detection Using Mammogram Images with Improved Multi-Fractal Dimension Approach and Feature Fusion}},
+  author={Zebari, Diyar Akay and Ibrahim, Dalia Abdulrahman and Zeebaree, Diyar Qader and Mohammed, Mazin Abed and Haron, Habibollah and Zebari, Nechirvan Asaad and Dama{\v{s}}evi{\v{c}}ius, Robertas and Maskeli{\=u}nas, Rytis},
+  journal={Applied Sciences},
+  volume={11},
+  number={24},
+  pages={12122},
+  year={2021},
+  publisher={MDPI},
+  doi={https://doi.org/10.3390/app112412122}
+}
+
