--- a/thesis/relatedwork.tex
+++ b/thesis/relatedwork.tex
@@ -3,14 +3,14 @@
 \section{Current Landscape of Breast Cancer Detection and Recent Advances}
 Breast cancer identification with conventional techniques like mammography and ultrasound is still a major worldwide health concern. Randomized controlled trials have demonstrated that screening for breast cancer has long been a key component in lowering the death rate from the disease. Recent research, including that of Beau et al., calls into question the programmatic effect of screening on the death rates from breast cancer \cite{Mortality}. Using data from Danish national registries and mammography screening in Copenhagen, the "naïve" and "follow-up" models initially predicted an 11\% and 10\% decrease in breast cancer mortality, respectively. When women who were no longer eligible for screening were taken into account, the "evaluation model" showed a noteworthy 20\% decrease in breast cancer mortality \cite{Mortality}. This emphasizes how difficult it is to determine long-term effects from observational data and emphasizes the need for individual-level data for accurate evaluation. 
 
-Recent advancements in early breast cancer detection have shown promise in addressing these challenges. Technologies such as Digital breast tomosynthesis (DBT), a limited-angle tomographic breast imaging technique, has emerged as a promising solution to overcome these challenges \cite{Tomosynthesis}. DBT involves acquiring multiple projection views while the x-ray source traverses along a predefined trajectory, enabling the reconstruction of sections parallel to the breast support. These advancements motivate our research, as we aim to contribute to the field by introducing a novel approach that combines wavelet-based analysis with machine learning for enhanced early breast cancer detection.
+The recent breakthroughs in breast cancer detection in its early stages have been effective in the pursuit of these objectives. Technologies like DBT, which is digital breast tomosynthesis, an imaging technique based on limited-angle tomography, has been found to be the best solution for overcoming these problems \cite{Tomosynthesis}. DBT is based on collecting multiple projections views while the x-ray source is traversing along a predefined line, which make it capable of re-constructing sections that look parallel to the breast support.
 \section{Wavelet-Based Approaches in Breast Cancer Detection}
-In medical image fusion, wavelet-based techniques have become more popular, especially when it comes to improving the use of multimodal medical images for better diagnosis and treatment planning. A novel approach for merging multimodal medical images utilizing the lifting scheme-based biorthogonal wavelet transform is presented in the work of Prakash et al. \cite{Multiscale}. By utilizing wavelet domain fusion, this technique overcomes the drawbacks of pixel-level fusion, including blurring effects and detail reduction. In order to produce a composite image with more precise and thorough information, medical image fusion is essential for merging data from many sensors, including computed tomography (CT), magnetic resonance imaging (MRI), and positron emission tomography (PET). These investigations have shown that wavelets may effectively capture complex textures and patterns in breast tissue, enhancing the discriminative power of diagnostic models \cite{Multiscale}
+The wavelet-based methods, for the good cause in diagnosing breast cancer, are rapidly improving to provide a better interpretation of the mammogram images. According to a new study, it is possible to develop a new way to group mammograms of both benign and malignant breast cancer. Being especially observed with research performed and published in Applied Sciences, the method suggested is multi-fractal dimension-oriented which is also feature fused, allowing a significant detection accuracy on INbreast, MIAS, DDSM and BCDR. \cite{zebari2021breast}
 
-The advantages of wavelet-based approaches include their adaptability to different resolutions and scales, aiding in the extraction of relevant features from mammograms. However, challenges such as selecting appropriate wavelet functions and addressing computational complexity need careful consideration. Our research builds upon these findings, aiming to leverage the benefits of wavelet analysis to enhance the interpretability and accuracy of breast cancer detection models.
+The usefulness of wavelet-based methods is that they allow for the use of different resolutions and scales, thus enabling the selection of the most relevant features from mammograms. However, these challenges include selecting the best wavelet functions and dealing with the computational complexity have to be resolved with care. The baseline of our investigation lies in these discoveries and uses wavelet analysis to enhance the breast cancer detection model's accuracy and interpretability.
 \section{Integration of Machine Learning with Wavelet Analysis}
-Recent studies have explored the integration of machine learning algorithms with wavelet-based feature extraction for improved breast cancer detection. This combination has shown promising results, with enhanced diagnostic accuracy compared to traditional methods. Machine learning models, trained on features derived from wavelet-transformed images, exhibit increased sensitivity and specificity in identifying subtle patterns indicative of malignancy \cite{Tumor}.
+Recent investigations have considered the incorporation of machine learning algorithms with wavelet feature extraction for breast cancer diagnosis that is more exact. This mix is demonstrating its positive effect, as its diagnostic accuracy comes out to be higher than traditional screening methods. Feature-based machine learning models yielded improved sensitivity and specificity in detecting the faint signs which point towards malignancy in the wavelet-transformed images \cite{Tumor}.
 
-Support vector machines (SVM), artificial neural networks (ANN), and deep learning models are examples of machine learning methods that have shown promise in the classification of breast cancer lesions. The research conducted by Jalloul et al. \cite{Ovarian} examines diverse machine learning methodologies utilized on medical images, demonstrating its capacity to enhance diagnostic precision and expedite the identification of early diseases.
+Support Vector Machine (SVM), Neural Networks, and deep learning models are some of the classifications of breast cancer lesions with machine learning methods that have shown some promise. The research by Jalloul et al. \cite{Ovarian} illustrates the potential of machine learning to improve the diagnostic accuracy and shorten the time for detection of early diseases through the use of diverse machine learning methods on medical images.
 
-The integration of machine learning with wavelet analysis presents a synergistic approach, combining the strengths of both methodologies. Successful applications, such as those discussed by Jalloul et al. \cite{Ovarian}, demonstrate the potential of this integration to revolutionize breast cancer detection, offering a more robust and efficient diagnostic framework. Our research aims to contribute to this growing body of knowledge by implementing a machine learning model integrated with wavelet-based features, thereby advancing the field of early breast cancer detection.
+A synergistic approach is realized in the combination of the machine learning with wavelet analysis in that the two methodologies are integrated to complement each other. Applications that were shown to be successful, including those discussed by Jalloul et al. \cite{Ovarian}, present the integration as a way to revolutionize early breast cancer detection, by offering a more reliable and efficient diagnosis setup. The main goal of our research is to contribute to the existing large body of science by implementing a machine learning model along with wavelet-based features, thereby helping significantly in early breast cancer detection.
